{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 418,
  "lineage": "d528b391-62db-a235-2cb8-543bfa185fea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ecs_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051253058380:internet-gateway/igw-079328d3712fbea93",
            "id": "igw-079328d3712fbea93",
            "owner_id": "051253058380",
            "tags": {
              "Name": "ct20231211-ecs-internet-gateway"
            },
            "tags_all": {
              "Name": "ct20231211-ecs-internet-gateway"
            },
            "vpc_id": "vpc-06c332380759f8518"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ecs_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051253058380:route-table/rtb-00a453b21efabdb46",
            "id": "rtb-00a453b21efabdb46",
            "owner_id": "051253058380",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-079328d3712fbea93",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ct20231211-ecs-route-table"
            },
            "tags_all": {
              "Name": "ct20231211-ecs-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c332380759f8518"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ecs_igw",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ecs_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-038dcd43bb1297ea9",
            "route_table_id": "rtb-00a453b21efabdb46",
            "subnet_id": "subnet-046258a4c8a64d766"
          },
          "dependencies": [
            "aws_internet_gateway.ecs_igw",
            "aws_route_table.ecs_route_table",
            "aws_subnet.ecs_subnet",
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051253058380:security-group/sg-0b846517bb29201b1",
            "description": "Security group for ECS task",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b846517bb29201b1",
            "ingress": [],
            "name": "ct20231211-ecs-security-group",
            "name_prefix": "",
            "owner_id": "051253058380",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ct20231211-ecs-security-group"
            },
            "tags_all": {
              "Name": "ct20231211-ecs-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c332380759f8518"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ecs_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051253058380:subnet/subnet-046258a4c8a64d766",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046258a4c8a64d766",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051253058380",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ct20231211-ecs-public-subnet"
            },
            "tags_all": {
              "Name": "ct20231211-ecs-public-subnet"
            },
            "vpc_id": "vpc-06c332380759f8518"
          },
          "dependencies": [
            "aws_vpc.ecs_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ecs_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:051253058380:vpc/vpc-06c332380759f8518",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060b358a006a95940",
            "default_route_table_id": "rtb-05b37c4add6bdbd9c",
            "default_security_group_id": "sg-05537134bf52034de",
            "dhcp_options_id": "dopt-0e0fad2bd11f92dc0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c332380759f8518",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b37c4add6bdbd9c",
            "owner_id": "051253058380",
            "tags": {
              "Name": "ct20231211-ecs-vpc"
            },
            "tags_all": {
              "Name": "ct20231211-ecs-vpc"
            }
          }
        }
      ]
    }
  ]
}